Add technical descriptions to all projects and update MovieMate technologies

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                     </div>
                     <div class="project-content">
                         <h3>MediMatch – Medicine Recommendation System</h3>
+                        <p class="project-tech-desc"><strong>Description:</strong> Utilizes Django for backend logic, Python for data processing, Scikit-learn for machine learning, and TF-IDF for text vectorization. SQLite is used for lightweight data storage. The system integrates ML models into a web interface for real-time medicine recommendations.</p>
                         <p>Developed a Django-based medicine recommendation system that leverages machine learning to suggest appropriate medications based on user-provided symptoms. The system employs TF-IDF vectorization combined with Scikit-learn ML algorithms to analyze symptom patterns and provide accurate, data-driven recommendations with a user-friendly interface.</p>
                         <div class="tech-tags">
                             <span>Django</span>
@@ -179,8 +180,30 @@
                             <span>SQLite</span>
                         </div>
                         <div class="project-links">
+                            <a href="https://github.com/AdityaHire/MediMatch" class="project-link"><i class="fab fa-github"></i> GitHub</a>
+                            <a href="https://web-production-b5521.up.railway.app/" class="project-link"><i class="fas fa-external-link-alt"></i> View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/movie-mate.png" alt="Movie Mate Project">
+                    </div>
+                    <div class="project-content">
+                        <h3>MovieMate – Movie Ticket Booking Portal</h3>
+                        <p class="project-tech-desc"><strong>Description:</strong> Developed using Django and Python for backend, HTML, CSS, and Bootstrap for frontend, and MySQL for database management. Features real-time seat selection, secure booking, and a responsive UI for seamless user experience. Integrates showtime management and real-time availability checks.</p>
+                        <p>MovieMate is a user-friendly movie ticket booking portal that lets users explore the latest movies, view showtimes, select seats, and book tickets seamlessly. It offers a smooth, secure, and hassle-free booking experience with real-time availability, making movie planning quick and convenient.</p>
+                        <div class="tech-tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>Bootstrap</span>
+                            <span>Django</span>
+                            <span>Python</span>
+                            <span>MySQL</span>
+                        </div>
+                        <div class="project-links">
                             <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
-                            <a href="https://medimatch-8lv8.onrender.com" class="project-link"><i class="fas fa-external-link-alt"></i> View Project</a>
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> View Project</a>
                         </div>
                     </div>
                 </div>
@@ -190,6 +213,7 @@
                     </div>
                     <div class="project-content">
                         <h3>ShopNexa - E-Commerce Web Application</h3>
+                        <p class="project-tech-desc"><strong>Description:</strong> Built with Django and Python for backend, Bootstrap for responsive UI, and MySQL for data management. Implements secure authentication, dynamic cart, category-based filtering, and efficient pagination. Uses Django ORM for database operations and an admin panel for management.</p>
                         <p>Developed a full-stack e-commerce web application using Django framework featuring secure user authentication, dynamic shopping cart functionality, advanced product filtering by categories, efficient pagination, and SEO-friendly URLs. Integrated Bootstrap for responsive design and MySQL for robust data management with an intuitive admin panel.</p>
                         <div class="tech-tags">
                             <span>Django</span>
@@ -210,6 +234,7 @@
                     </div>
                     <div class="project-content">
                         <h3>AI Pose Estimation System</h3>
+                        <p class="project-tech-desc"><strong>Description:</strong> Leverages Python with OpenCV for image processing and MediaPipe for pose detection. Real-time video analysis is performed to extract body landmarks and calculate joint angles, enabling accurate exercise repetition counting and posture tracking.</p>
                         <p>Developed an AI-based pose estimation system using Python, OpenCV, and MediaPipe to detect human body landmarks in real time and accurately count exercise repetitions like squats, push-ups, and bicep curls. The system analyzes joint angles to track posture and movement, helping improve workout accuracy and fitness monitoring.</p>
                         <div class="tech-tags">
                             <span>Python</span>
