Enhance content in index.html with new projects and skills
Updated internship details and added new project descriptions for Blogify and TaskMate. Enhanced technical skills and achievements sections with additional information.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -112,7 +113,7 @@
                                 <div class="timeline-dot"></div>
                                 <div class="timeline-content">
                                     <h3>Python Full Stack Virtual Intern</h3>
-                                    <p class="company">AICTE Remote Internship</p>
+                                    <p class="company">AICTE Remote Internship • Apr 2025 – Jun 2025</p>
                                     <ul>
                                         <li>Built responsive Django web applications using HTML, CSS, JavaScript, and SQL</li>
                                         <li>Implemented REST APIs, secure user authentication and scalable backend logic</li>
@@ -249,6 +250,48 @@
                         </div>
                     </div>
                 </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/blogify.png" alt="Blogify Project">
+                    </div>
+                    <div class="project-content">
+                        <h3>Blogify – Blog Website (MERN Stack)</h3>
+                        <p class="project-tech-desc"><strong>Description:</strong> Full-stack blogging platform built using the MERN stack (MongoDB, Express.js, React.js, Node.js). Features JWT-based secure authentication, rich text editor for content creation, dynamic comment system, and responsive design for optimal user experience across all devices.</p>
+                        <p>Developed a modern blogging platform featuring user authentication, content management, rich text editing capabilities, and an interactive comment system. Built with MERN architecture ensuring optimal performance, scalability, and seamless user experience.</p>
+                        <div class="tech-tags">
+                            <span>MongoDB</span>
+                            <span>Express.js</span>
+                            <span>React.js</span>
+                            <span>Node.js</span>
+                            <span>JWT</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/taskmate.png" alt="TaskMate Project">
+                    </div>
+                    <div class="project-content">
+                        <h3>TaskMate – Todo List Application</h3>
+                        <p class="project-tech-desc"><strong>Description:</strong> Productivity application built with Django and Bootstrap for task management. Features SQLite database for data persistence, JavaScript for dynamic interactions, and implements full CRUD operations for efficient task organization and tracking.</p>
+                        <p>Built a comprehensive todo list application for efficient task organization featuring priority levels, deadline tracking, progress monitoring, and task categorization. Provides an intuitive user interface with responsive design for enhanced productivity and seamless user experience.</p>
+                        <div class="tech-tags">
+                            <span>Django</span>
+                            <span>Bootstrap</span>
+                            <span>SQLite</span>
+                            <span>JavaScript</span>
+                            <span>CRUD Operations</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> View Project</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -260,13 +303,19 @@
             <div class="skills-list">
                 <span class="skill-tag">Python</span>
                 <span class="skill-tag">SQL</span>
+                <span class="skill-tag">JavaScript</span>
                 <span class="skill-tag">Django</span>
+                <span class="skill-tag">React.js</span>
+                <span class="skill-tag">Node.js</span>
+                <span class="skill-tag">Express.js</span>
+                <span class="skill-tag">Bootstrap</span>
                 <span class="skill-tag">NumPy</span>
                 <span class="skill-tag">Pandas</span>
                 <span class="skill-tag">Matplotlib</span>
                 <span class="skill-tag">Scikit-learn</span>
                 <span class="skill-tag">MySQL</span>
                 <span class="skill-tag">SQLite</span>
+                <span class="skill-tag">MongoDB</span>
                 <span class="skill-tag">Git</span>
                 <span class="skill-tag">GitHub</span>
                 <span class="skill-tag">Jupyter Notebook</span>
@@ -276,8 +325,10 @@
                 <span class="skill-tag">Machine Learning</span>
                 <span class="skill-tag">Django ORM</span>
                 <span class="skill-tag">MVT Architecture</span>
+                <span class="skill-tag">System Design</span>
                 <span class="skill-tag">Heroku</span>
                 <span class="skill-tag">Render</span>
+                <span class="skill-tag">GitHub Actions</span>
                 <span class="skill-tag">CI/CD</span>
             </div>
         </div>
@@ -355,13 +406,26 @@
             <div class="awards-list">
                 <div class="award-card">
                     <div class="award-image">
+                        <img src="images/research-paper.jpg" alt="Published Research">
+                    </div>
+                    <div class="award-content">
+                        <h3>Published Research – FitVerse: AI-Driven Real-Time Pose Correction System</h3>
+                        <p>
+                            Published research paper in MAT Journals, 2025, focusing on Computer Vision and Machine Learning applications 
+                            for real-time pose correction. The research explores AI-driven solutions for fitness applications, contributing 
+                            to advancements in exercise form correction and body posture analysis.
+                        </p>
+                    </div>
+                </div>
+                <div class="award-card">
+                    <div class="award-image">
                         <img src="images/Ai Bootcamp.jpg" alt="Global AI Bootcamp">
                     </div>
                     <div class="award-content">
                         <h3>Global AI Bootcamp 2025 - 1st Place</h3>
                         <p>
                             Secured 1st place in the AI Quiz Competition at the Global AI Bootcamp 2025 held at P. R. Pote College of Engineering 
-                            and Management (PRPCEM). Demonstrated strong knowledge in AI concepts and problem-solving skills.
+                            and Management (PRPCEM). Demonstrated strong knowledge in AI concepts and problem-solving skills, competing against 100+ participants.
                         </p>
                     </div>
                 </div>
@@ -372,8 +436,8 @@
                     <div class="award-content">
                         <h3>Google Developer Group (GDG), PRPCEM</h3>
                         <p>
-                            Contributed to Google Developer Group activities at P. R. Pote College of Engineering and Management (PRPCEM). 
-                            Actively participated in community events, workshops, and collaborative learning sessions.
+                            Active member and contributor to Google Developer Group activities at P. R. Pote College of Engineering and Management (PRPCEM). 
+                            Actively participated in community events, technical workshops, hackathons, and collaborative learning sessions.
                         </p>
                     </div>
                 </div>
